--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 
   <title>Sidebar Page</title>
 </head>
 <body>
-  
+  <aside class="closed-menu">
+    <nav>
+      <div class="logo-icon-container">
+        <img class="logo hidden" src="assets/logo.svg" alt="vet logo"/>
+        <img class="menu-opener" src="assets/menu.svg" alt="menu icon" />
+      </div>
+      <div class="icon-container">
+        <img src="assets/search.svg" alt="search icon" />
+        <p class="hidden">Buscar</p>
+      </div>
+      <div class="icon-container">
+        <img src="assets/grid.svg" alt="grid icon" />
+        <p class="hidden">Dashboard</p>
+      </div>
+      <div class="icon-container">
+        <img src="assets/pet.svg" alt="pet icon" />
+        <p class="hidden">Pets</p>
+      </div>
+      <div class="icon-container">
+        <img src="assets/user.svg" alt="user icon" />
+        <p class="hidden">Clientes</p>
+      </div>
+      <div class="icon-container">
+        <img src="assets/vet.svg" alt="veterinary icon" />
+        <p class="hidden">Vets</p>
+      </div>
+      <div class="icon-container">
+        <img src="assets/settings.svg" alt="settings icon" />
+        <p class="hidden">Ajustes</p>
+      </div>
+    </nav>
+    <div class="menu-footer">
+      <div class="avatar-container hidden">
+        <img class="avatar" src="assets/photo.jpg" alt="user-photo"/>
+        <div>
+          <span>Eleanor Pena</span>
+          <span>Veterinária</span>
+        </div>
+      </div>
+      <img class="log-out" src="assets/log-out.svg" alt="log-out icon" />
+    </div>
+  </aside>
+  <main>
+    <h1>Dashboard</h1>
+  </main>
 
   <script src="script.js"></script>
 </body>
